--- a/JavaFX Practice/src/java9FXBook/ch13/ColorChooser/ColorChooser.fxml
+++ b/JavaFX Practice/src/java9FXBook/ch13/ColorChooser/ColorChooser.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Rectangle?>
 
-<GridPane hgap="8.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ColorChooserController">
+<GridPane hgap="8.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="java9FXBook.ch13.ColorChooser.ColorChooserController">
   <columnConstraints>
     <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" />
     <ColumnConstraints hgrow="SOMETIMES" />
