--- a/JavaFX Practice/src/java9FXBook/ch13/CoverViewer/CoverViewer.fxml
+++ b/JavaFX Practice/src/java9FXBook/ch13/CoverViewer/CoverViewer.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.BorderPane?>
 
 
-<BorderPane xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CoverViewerController">
+<BorderPane xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="java9FXBook.ch13.CoverViewer.CoverViewerController">
    <center>
 <ImageView fx:id="coverImageView" fitHeight="480.0" fitWidth="370.0" pickOnBounds="true" preserveRatio="true" />
    </center>
