--- a/JavaFX Practice/src/java9FXBook/ch20/PolyShapes/PolyShapes.fxml
+++ b/JavaFX Practice/src/java9FXBook/ch20/PolyShapes/PolyShapes.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.shape.Polygon?>
 <?import javafx.scene.shape.Polyline?>
 
-<BorderPane prefHeight="200.0" prefWidth="400.0" stylesheets="@PolyShapes.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="PolyShapesController">
+<BorderPane prefHeight="200.0" prefWidth="400.0" stylesheets="@PolyShapes.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="java9FXBook.ch20.PolyShapes.PolyShapesController">
    <left>
       <VBox prefHeight="200.0" prefWidth="100.0" spacing="8.0" BorderPane.alignment="CENTER">
          <children>
