--- a/JavaFX Practice/src/java9FXBook/ch20/CanvasShapes/CanvasShapes.fxml
+++ b/JavaFX Practice/src/java9FXBook/ch20/CanvasShapes/CanvasShapes.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.Pane?>
 
 
-<Pane xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CanvasShapesController">
+<Pane xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="java9FXBook.ch20.CanvasShapes.CanvasShapesController">
    <children>
       <Canvas fx:id="drawingCanvas" height="115.0" width="650.0" />
    </children>
