--- a/JavaFX Practice/src/java9FXBook/ch20/DrawStars/DrawStars.fxml
+++ b/JavaFX Practice/src/java9FXBook/ch20/DrawStars/DrawStars.fxml
@@ -2,4 +2,4 @@
 
 <?import javafx.scene.layout.Pane?>
 
-<Pane id="Pane" fx:id="pane" prefHeight="300.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="DrawStarsController" />
+<Pane id="Pane" fx:id="pane" prefHeight="300.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="java9FXBook.ch20.DrawStars.DrawStarsController" />
