--- a/JavaFX Practice/src/java9FXBook/ch20/VideoPlayer/VideoPlayer.fxml
+++ b/JavaFX Practice/src/java9FXBook/ch20/VideoPlayer/VideoPlayer.fxml
@@ -11,7 +11,7 @@
    style="-fx-background-color: black;" 
    xmlns="http://javafx.com/javafx/8.0.60" 
    xmlns:fx="http://javafx.com/fxml/1" 
-   fx:controller="VideoPlayerController">
+   fx:controller="java9FXBook.ch20.VideoPlayer.VideoPlayerController">
    <bottom>
       <ToolBar prefHeight="40.0" prefWidth="200.0" 
          BorderPane.alignment="CENTER">
