--- a/JavaFX Practice/src/practice14/Tabscollation/Template.fxml
+++ b/JavaFX Practice/src/practice14/Tabscollation/Template.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="practice14.Tabscollation.TemplateController">
+<AnchorPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="practice14.Tabscollation.TemplateControlSingle">
    <children>
       <ImageView fitHeight="548.0" fitWidth="662.0" layoutY="-14.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -24,7 +24,7 @@
       <Line endX="200.0" layoutX="260.0" layoutY="70.0" startX="-100.0" stroke="WHITE" strokeWidth="3.0" />
       <ScrollPane fx:id="scrollPane" layoutX="16.0" layoutY="89.0" prefHeight="401.0" prefWidth="612.0">
         <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="383.0" prefWidth="535.0" style="-fx-background-color: green;" />
         </content>
       </ScrollPane>
    </children>
