--- a/JavaFX Practice/src/practice18/fontsTest/Test.fxml
+++ b/JavaFX Practice/src/practice18/fontsTest/Test.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
+<?import java.util.ArrayList?>
 
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="practice18.fontsTest.TestController">
@@ -10,4 +11,14 @@
       <Label fx:id="lbl2" prefHeight="92.0" prefWidth="214.0" text="Label" />
       <Label fx:id="lbl3" prefHeight="75.0" prefWidth="159.0" text="Label" />
    </children>
-</VBox>
+
+
+<fx:define>
+	<ArrayList fx:id="SNArray">
+		<fx:reference source="lbl1" />
+		<fx:reference source="lbl2" />
+		<fx:reference source="lbl3" />
+	</ArrayList>
+</fx:define>
+    
+    </VBox>
