--- a/JavaFX Practice/src/java9FXBook/ch20/VideoPlayer/VideoPlayer.fxml
+++ b/JavaFX Practice/src/java9FXBook/ch20/VideoPlayer/VideoPlayer.fxml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <!-- VideoPlayer.fxml -->
 <!-- Defines the VideoPlayer GUI with a MediaView and a Button -->
 
@@ -7,18 +8,12 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.media.MediaView?>
 
-<BorderPane prefHeight="400.0" prefWidth="600.0" 
-   style="-fx-background-color: black;" 
-   xmlns="http://javafx.com/javafx/8.0.60" 
-   xmlns:fx="http://javafx.com/fxml/1" 
-   fx:controller="java9FXBook.ch20.VideoPlayer.VideoPlayerController">
+<BorderPane fx:id="rootPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="java9FXBook.ch20.VideoPlayer.VideoPlayerController">
    <bottom>
-      <ToolBar prefHeight="40.0" prefWidth="200.0" 
-         BorderPane.alignment="CENTER">
+      <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <items>
-            <Button fx:id="playPauseButton" 
-              onAction="#playPauseButtonPressed" prefHeight="25.0" 
-              prefWidth="60.0" text="Play" />
+            <Button fx:id="playPauseButton" onAction="#playPauseButtonPressed" prefHeight="25.0" prefWidth="60.0" text="Play" />
+            <Button fx:id="btnhide" mnemonicParsing="false" onAction="#hideMe" text="NEW scene" />
          </items>
       </ToolBar>
    </bottom>
@@ -26,21 +21,3 @@
       <MediaView fx:id="mediaView" BorderPane.alignment="CENTER" />
    </center>
 </BorderPane>
-
-
-<!--
-**************************************************************************
-* (C) Copyright 1992-2017 by Deitel & Associates, Inc. and               *
-* Pearson Education, Inc. All Rights Reserved.                           *
-*                                                                        *
-* DISCLAIMER: The authors and publisher of this book have used their     *
-* best efforts in preparing the book. These efforts include the          *
-* development, research, and testing of the theories and programs        *
-* to determine their effectiveness. The authors and publisher make       *
-* no warranty of any kind, expressed or implied, with regard to these    *
-* programs or to the documentation contained in these books. The authors *
-* and publisher shall not be liable in any event for incidental or       *
-* consequential damages in connection with, or arising out of, the       *
-* furnishing, performance, or use of these programs.                     *
-**************************************************************************
--->
